docs: update README with new tech stack (Tapir + Netty + Magnum + Docker)
- Update tech stack: Scala 3.8.3, Tapir + Netty Sync, Magnum, uPickle
- Add Docker section: build, run, test commands
- Add jlink module list for minimal JRE
- Add error handling section with TodoError types
- Update API reference with health endpoint
- Update database section with H2 in-memory config
- Update DEPLOYMENT-README with new Docker build process
- Add schema for todo_row/subtask_row (Magnum compatible)
- Add Docker troubleshooting section